# interpreter

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: command.h  integer.h  interpreter.h  lexer.h  mystring.h  parser.h  value.h
src/: integer.cpp  interpreter.cpp  lexer.cpp  mystring.cpp  parser.cpp
tests/: CMakeLists.txt  test_integer.cpp  test_interpreter.cpp  test_lexer.cpp  test_parser.cpp
